Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24935

Crash when changing filter for clazy analyzer when running

    XMLWordPrintable

Details

    • 32e455c12e96311b52270599b95045d3aba91176 (qt-creator/qt-creator/4.14)

    Description

      To reproduce:

      Load a creator project and start analyze. It's going to last about 1 hour. During analyze build play with changing the filter for different types of issues inside analyzer. At some random point a crash occurs. Call stack:

      1  TextEditor::TextMark::setVisible                                                                                                                                                                                         textmark.cpp                  246  0x7fffd1af74f1 
      2  ClangTools::Internal::DiagnosticFilterModel::filterAcceptsRow                                                                                                                                                            clangtoolsdiagnosticmodel.cpp 633  0x7fffc2fa8054 
      3  ClangTools::Internal::DiagnosticFilterModel::filterAcceptsRow                                                                                                                                                            clangtoolsdiagnosticmodel.cpp 617  0x7fffc2fa7f40 
      4  QSortFilterProxyModelPrivate::filterAcceptsRowInternal                                                                                                                                                                   qsortfilterproxymodel.cpp     446  0x7ffff62e7cee 
      5  QSortFilterProxyModelPrivate::handle_filter_changed                                                                                                                                                                      qsortfilterproxymodel.cpp     1323 0x7ffff62eb1ff 
      6  QSortFilterProxyModelPrivate::filter_changed                                                                                                                                                                             qsortfilterproxymodel.cpp     1277 0x7ffff62eaf7e 
      7  QSortFilterProxyModel::invalidateFilter                                                                                                                                                                                  qsortfilterproxymodel.cpp     3015 0x7ffff62f0b23 
      8  ClangTools::Internal::DiagnosticFilterModel::setFilterOptions                                                                                                                                                            clangtoolsdiagnosticmodel.cpp 715  0x7fffc2fa8919 
      9  ClangTools::Internal::ClangTool::setFilterOptions                                                                                                                                                                        clangtool.cpp                 955  0x7fffc2f7ee8e 
      10 ClangTools::Internal::ClangTool::filter                                                                                                                                                                                  clangtool.cpp                 992  0x7fffc2f7f2d6 
      11 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (ClangTools::Internal::ClangTool:: *)()>::call(void (ClangTools::Internal::ClangTool:: *)(), ClangTools::Internal::ClangTool *, void * *) qobjectdefs_impl.h            152  0x7fffc2f94ad4 
      12 QtPrivate::FunctionPointer<void (ClangTools::Internal::ClangTool:: *)()>::call<QtPrivate::List<>, void>(void (ClangTools::Internal::ClangTool:: *)(), ClangTools::Internal::ClangTool *, void * *)                       qobjectdefs_impl.h            185  0x7fffc2f93582 
      13 QtPrivate::QSlotObject<void (ClangTools::Internal::ClangTool:: *)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void * *, bool *)                                                      qobjectdefs_impl.h            418  0x7fffc2f91081 
      14 QtPrivate::QSlotObjectBase::call                                                                                                                                                                                         qobjectdefs_impl.h            398  0x7ffff6332531 
      15 doActivate<false>                                                                                                                                                                                                        qobject.cpp                   3886 0x7ffff6371605 
      16 QMetaObject::activate                                                                                                                                                                                                    qobject.cpp                   3946 0x7ffff636b181 
      17 QAction::triggered                                                                                                                                                                                                       moc_qaction.cpp               376  0x7ffff7414756 
      18 QAction::activate                                                                                                                                                                                                        qaction.cpp                   1161 0x7ffff74136af 
      19 QAction::trigger                                                                                                                                                                                                         qaction.h                     187  0x7ffff74151a3 
      20 QToolButton::nextCheckState                                                                                                                                                                                              qtoolbutton.cpp               996  0x7ffff769cd9b 
      21 QAbstractButtonPrivate::click                                                                                                                                                                                            qabstractbutton.cpp           398  0x7ffff75661c8 
      22 QAbstractButton::mouseReleaseEvent                                                                                                                                                                                       qabstractbutton.cpp           1044 0x7ffff7567876 
      23 QToolButton::mouseReleaseEvent                                                                                                                                                                                           qtoolbutton.cpp               622  0x7ffff769b877 
      24 QWidget::event                                                                                                                                                                                                           qwidget.cpp                   8645 0x7ffff746dc2d 
      25 QAbstractButton::event                                                                                                                                                                                                   qabstractbutton.cpp           1001 0x7ffff75676ba 
      26 QToolButton::event                                                                                                                                                                                                       qtoolbutton.cpp               1012 0x7ffff769ce19 
      27 QApplicationPrivate::notify_helper                                                                                                                                                                                       qapplication.cpp              3632 0x7ffff7424859 
      28 QApplication::notify                                                                                                                                                                                                     qapplication.cpp              3076 0x7ffff74223e2 
      29 QCoreApplication::notifyInternal2                                                                                                                                                                                        qcoreapplication.cpp          1064 0x7ffff6321378 
      30 QCoreApplication::sendSpontaneousEvent                                                                                                                                                                                   qcoreapplication.cpp          1471 0x7ffff6321d4a 
      31 QApplicationPrivate::sendMouseEvent                                                                                                                                                                                      qapplication.cpp              2614 0x7ffff7420fb3 
      32 QWidgetWindow::handleMouseEvent                                                                                                                                                                                          qwidgetwindow.cpp             683  0x7ffff749ce41 
      33 QWidgetWindow::event                                                                                                                                                                                                     qwidgetwindow.cpp             300  0x7ffff749b6ea 
      34 QApplicationPrivate::notify_helper                                                                                                                                                                                       qapplication.cpp              3632 0x7ffff7424859 
      35 QApplication::notify                                                                                                                                                                                                     qapplication.cpp              2972 0x7ffff7421d0f 
      36 QCoreApplication::notifyInternal2                                                                                                                                                                                        qcoreapplication.cpp          1064 0x7ffff6321378 
      37 QCoreApplication::sendSpontaneousEvent                                                                                                                                                                                   qcoreapplication.cpp          1471 0x7ffff6321d4a 
      38 QGuiApplicationPrivate::processMouseEvent                                                                                                                                                                                qguiapplication.cpp           2282 0x7ffff6ab8dcb 
      39 QGuiApplicationPrivate::processWindowSystemEvent                                                                                                                                                                         qguiapplication.cpp           2002 0x7ffff6ab8019 
      40 QWindowSystemInterface::sendWindowSystemEvents                                                                                                                                                                           qwindowsysteminterface.cpp    1169 0x7ffff6a986a2 
      41 xcbSourceDispatch                                                                                                                                                                                                        qxcbeventdispatcher.cpp       105  0x7fffe50ad167 
      42 g_main_context_dispatch                                                                                                                                                                                                                                     0x7ffff2f6ffd7 
      43 g_main_context_iterate.constprop                                                                                                                                                                                                                            0x7ffff2fc0d88 
      44 g_main_context_iteration                                                                                                                                                                                                                                    0x7ffff2f6d41f 
      45 QEventDispatcherGlib::processEvents                                                                                                                                                                                      qeventdispatcher_glib.cpp     423  0x7ffff63b02c6 
      46 QXcbGlibEventDispatcher::processEvents                                                                                                                                                                                   qxcbeventdispatcher.cpp       143  0x7fffe50ad384 
      47 QEventLoop::processEvents                                                                                                                                                                                                qeventloop.cpp                139  0x7ffff631de5f 
      48 QEventLoop::exec                                                                                                                                                                                                         qeventloop.cpp                232  0x7ffff631e16c 
      49 QCoreApplication::exec                                                                                                                                                                                                   qcoreapplication.cpp          1372 0x7ffff6321b67 
      50 QGuiApplication::exec                                                                                                                                                                                                    qguiapplication.cpp           1867 0x7ffff6ab7a7c 
      51 QApplication::exec                                                                                                                                                                                                       qapplication.cpp              2824 0x7ffff742170f 
      52 main                                                                                                                                                                                                                     main.cpp                      742  0x40e75d       
      

      In the top call to TextMark::setVisible(), this pointer of TextMark is null.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-24935
        # Subject Branch Project Status CR V

        Activity

          People

            jkobus Jarek Kobus
            jkobus Jarek Kobus
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes