Fix a crash when changing filter for clazy analyzer

Fixes: QTCREATORBUG-24935
Change-Id: I94ff4f1a5bdd07c8055608048773b4a81a81fcb3
Reviewed-by: David Schulz <david.schulz@qt.io>